--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-photo-view": "^1.2.7",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
